--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 					<span>Patrik Mihalčin</span>
 				</h1>
 				<p id="social">
-					<a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i class="fa icon-twitter"></i><span>Twitter</span></a>
-					<a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i class="fa icon-github"></i><span>GitHub</span></a>					
+					<a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin" title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>	
+					<a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i class="fa icon-twitter"></i><span>Twitter</span></a>					
+					<a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i class="fa icon-github"></i><span>GitHub</span></a>	
 					<a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i class="fa fa-slideshare"></i><span>Speakerdeck</span></a>					
 					<a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i class="fa icon-linkedin"></i><span>LinkedIn</span></a>
-					<a rel="me" target="_blank" href="https://instagram.com/pmihalcin/" title="instagram"><i class="icon-instagram fa"></i><span>Instagram</span></a>
-					<a rel="me" target="_blank" href="mailto:patrik@mihalc.in" title="Email">
-						<i class="fa-envelope-o fa"></i><span>patrik@mihalc.in</span></a>
+					<a rel="me" target="_blank" href="mailto:mihalcin.patrik@gmail.com" title="Email">
+						<i class="fa-envelope-o fa"></i><span>mihalcin.patrik at gmail dot com</span></a>
 					</p>
 				</section>
 
