--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i class="fa icon-github"></i><span>GitHub</span></a>	
 					<a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i class="fa fa-slideshare"></i><span>Speakerdeck</span></a>					
 					<a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i class="fa icon-linkedin"></i><span>LinkedIn</span></a>
-					<a rel="me" target="_blank" href="mailto:mihalcin.patrik@gmail.com" title="Email">
+					<a rel="me" target="_blank" href="mailto:mihalcin.patrik at gmail dot com" title="Email">
 						<i class="fa-envelope-o fa"></i><span>mihalcin.patrik at gmail dot com</span></a>
 					</p>
 				</section>
