--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 					<span>Patrik Mihalčin</span>
 				</h1>
 				<p id="social">
-					<a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin" title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>	
-					<a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i class="fa icon-twitter"></i><span>Twitter</span></a>					
+                    <a rel="me" target="_blank" href="http://mihalc.in/blog/" title="BLOG"><i
+                            class="fa fa-pencil"></i><span>BLOG</span></a>
+                    <a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin"
+                       title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>
+                    <a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i
+                            class="fa icon-twitter"></i><span>Twitter</span></a>
 					<a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i class="fa icon-github"></i><span>GitHub</span></a>	
 					<a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i class="fa fa-slideshare"></i><span>Speakerdeck</span></a>					
 					<a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i class="fa icon-linkedin"></i><span>LinkedIn</span></a>
