--- a/index.html
+++ b/index.html
@@ -1,63 +1,75 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8"/>
-	<title>Patrik Mihalčin</title>
-	<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="bower_components/socialicious/css/socialicious.css" rel="stylesheet" type="text/css">
-	<link href="css/style.css" rel="stylesheet" type="text/css">	
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-16027196-2', 'auto');
-		ga('send', 'pageview');
-	</script>
+    <meta charset="utf-8"/>
+    <title>Patrik Mihalčin</title>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/socialicious/css/socialicious.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-16027196-2', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
-	<div id="wrap">
-		<div id="page">
-			<section id="contact">
-				<h1>
-					<img src="pm.png" alt="" />
-					<span>Patrik Mihalčin</span>
-				</h1>
-				<p id="social">
-                    <a rel="me" target="_blank" href="http://mihalc.in/blog/" title="BLOG"><i
-                            class="fa fa-pencil"></i><span>BLOG</span></a>
-                    <a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin"
-                       title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>
-                    <a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i
-                            class="fa icon-twitter"></i><span>Twitter</span></a>
-					<a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i class="fa icon-github"></i><span>GitHub</span></a>	
-					<a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i class="fa fa-slideshare"></i><span>Speakerdeck</span></a>					
-					<a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i class="fa icon-linkedin"></i><span>LinkedIn</span></a>
-					<a rel="me" target="_blank" href="mailto:mihalcin.patrik at gmail dot com" title="Email">
-						<i class="fa-envelope-o fa"></i><span>mihalcin.patrik at gmail dot com</span></a>
-					</p>
-				</section>
+<div id="wrap">
+    <div id="page">
+        <section id="contact">
+            <h1>
+                <img src="pm.png" alt=""/>
+                <span>Patrik Mihalčin</span>
+            </h1>
+            <p id="social">
+                <a rel="me" target="_blank" href="http://mihalc.in/blog/" title="BLOG"><i
+                        class="fa fa-pencil"></i><span>BLOG</span></a>
+                <a rel="me" target="_blank" href="http://bit.ly/mihalcin-cv" title="CV"><i
+                        class="fa fa-book"></i><span>CV</span></a>
+                <a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin"
+                   title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>
+                <a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i
+                        class="fa icon-twitter"></i><span>Twitter</span></a>
+                <a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i
+                        class="fa icon-github"></i><span>GitHub</span></a>
+                <a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i
+                        class="fa fa-slideshare"></i><span>Speakerdeck</span></a>
+                <a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i
+                        class="fa icon-linkedin"></i><span>LinkedIn</span></a>
+                <a rel="me" target="_blank" href="mailto:mihalcin.patrik at gmail dot com" title="Email">
+                    <i class="fa-envelope-o fa"></i><span>mihalcin.patrik at gmail dot com</span></a>
+            </p>
+        </section>
 
-				<section id="about">
-					<p>
-						<b>Software developer & test coach</b>
-					</p>
-					<p>Expert generalist</p>
-					<p>
-						Java, real-time systems, DevOps, Kanban, Continuous integration & testing and more...
-					</p>
-					<p>
-						Startups, ideas, improvements, self-development, photography, travel-hacking, ...
-					</p>
-					<p>
-						<b>Striving for change of the world, thinking big</b>
-					</p>
-				</section>
+        <section id="about">
+            <p>
+                <b>Software developer & test coach</b>
+            </p>
+            <p>Expert generalist</p>
+            <p>
+                Java, real-time systems, DevOps, Kanban, Continuous integration & testing and more...
+            </p>
+            <p>
+                Startups, ideas, improvements, self-development, photography, travel-hacking, ...
+            </p>
+            <p>
+                <b>Striving for change of the world, thinking big</b>
+            </p>
+        </section>
 
-				<section id="projects">
-				</section>
-			</div>
-		</div>
-	</body>
+        <section id="projects">
+        </section>
+    </div>
+</div>
+</body>
 </html>
