--- a/index.html
+++ b/index.html
@@ -34,33 +34,33 @@
             <p id="social">
                 <a rel="me" target="_blank" href="http://mihalc.in/blog/" title="BLOG"><i
                         class="fa fa-pencil"></i><span>BLOG</span></a>
+                <a rel="me" target="_blank" href="https://github.com/pmihalcin" title="github.com/pmihalcin"><i
+                        class="fa icon-github"></i><span>GitHub</span></a>
                 <a rel="me" target="_blank" href="http://bit.ly/mihalcin-cv" title="CV"><i
                         class="fa fa-book"></i><span>CV</span></a>
                 <a rel="me" target="_blank" href="https://stackoverflow.com/story/pmihalcin"
-                   title="developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>
-                <a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="@pmihalcin"><i
+                   title="StackOverflow developer story"><i class="fa fa-stack-overflow"></i><span>GitHub</span></a>
+                <a rel="me" target="_blank" href="https://twitter.com/pmihalcin" title="twitter.com/pmihalcin"><i
                         class="fa icon-twitter"></i><span>Twitter</span></a>
-                <a rel="me" target="_blank" href="https://github.com/pmihalcin" title="@pmihalcin"><i
-                        class="fa icon-github"></i><span>GitHub</span></a>
-                <a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin" title="speakerdeck"><i
+                <a rel="me" target="_blank" href="https://speakerdeck.com/pmihalcin"
+                   title="speakerdeck.com/pmihalcin"><i
                         class="fa fa-slideshare"></i><span>Speakerdeck</span></a>
-                <a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="linkedIn"><i
+                <a rel="me" target="_blank" href="https://www.linkedin.com/in/patrikmihalcin" title="LinkedIn"><i
                         class="fa icon-linkedin"></i><span>LinkedIn</span></a>
-                <a rel="me" target="_blank" href="mailto:mihalcin.patrik at gmail dot com" title="Email">
+                <a rel="me" target="_blank" href="mailto:mihalcin.patrik at gmail dot com" title="EMAIL">
                     <i class="fa-envelope-o fa"></i><span>mihalcin.patrik at gmail dot com</span></a>
             </p>
         </section>
 
         <section id="about">
             <p>
-                <b>Software developer & test coach</b>
-            </p>
-            <p>Expert generalist</p>
-            <p>
-                Java, real-time systems, DevOps, Kanban, Continuous integration & testing and more...
+                <b>Software developer</b>
             </p>
             <p>
-                Startups, ideas, improvements, self-development, photography, travel-hacking, ...
+                Java, DDD, real-time systems, DevOps, Kanban, continuous integration, deployment & testing and more...
+            </p>
+            <p>
+                Ideas, improvements, development, travel-hacking, photography...
             </p>
             <p>
                 <b>Striving for change of the world, thinking big</b>
